--- a/5HinhVuong.ipynb
+++ b/5HinhVuong.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "462e4c4c",
+   "execution_count": 5,
+   "id": "f8b8463c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,21 @@
     "a.pensize(2)\n",
     "for i in range(5):\n",
     "    a.left(72)\n",
-    "    for i in range(4):\n",
-    "        a.forward(150)\n",
-    "        a.right(90)"
+    "    a.forward(75)\n",
+    "    a.right(90)\n",
+    "    a.forward(150)\n",
+    "    a.right(90)\n",
+    "    a.forward(150)\n",
+    "    a.right(90)\n",
+    "    a.forward(150)\n",
+    "    a.right(90)\n",
+    "    a.forward(75)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05e26b4a",
+   "id": "4d064f92",
    "metadata": {},
    "outputs": [],
    "source": []
