--- a/AreaOfTriangle.ipynb
+++ b/AreaOfTriangle.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cf61c82",
+   "execution_count": 8,
+   "id": "9e94795a",
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,9 @@
      "output_type": "stream",
      "text": [
       "Nhập độ dài cạnh a: 5\n",
-      "Nhập độ dài cạnh b: 7\n"
+      "Nhập độ dài cạnh b: 7\n",
+      "Nhập độ dài cạnh c: 9\n",
+      "Diệt tích tam giác là: 17.41228014936585\n"
      ]
     }
    ],
@@ -31,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218ab12e",
+   "id": "fb65e5c8",
    "metadata": {},
    "outputs": [],
    "source": []
