--- a/AreaOfTriangle.ipynb
+++ b/AreaOfTriangle.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9e94795a",
+   "execution_count": 9,
+   "id": "7a62850d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập độ dài cạnh a: 5\n",
-      "Nhập độ dài cạnh b: 7\n",
-      "Nhập độ dài cạnh c: 9\n",
-      "Diệt tích tam giác là: 17.41228014936585\n"
+      "Nhập độ dài cạnh a: 3\n",
+      "Nhập độ dài cạnh b: 8\n",
+      "Nhập độ dài cạnh c: 11\n",
+      "Bạn nhập sai độ dài các cạnh rồi! Hãy kiểm tra lại nhé!\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb65e5c8",
+   "id": "8c416f63",
    "metadata": {},
    "outputs": [],
    "source": []
