Ve Ngoi Nha Voi Bien

--- a/VeNgoiNhaVoiBien.ipynb
+++ b/VeNgoiNhaVoiBien.ipynb
@@ -1,6 +1,260 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee46aba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import turtle\n",
+    "import math\n",
+    "screen = turtle.Screen()\n",
+    "screen.bgcolor(\"deepskyblue\")\n",
+    "t = turtle.Turtle()\n",
+    "t.color(\"black\")\n",
+    "t.speed(10)\n",
+    "t.penup()\n",
+    "t.goto(-200,-200)\n",
+    "t.pendown()\n",
+    "width = 400\n",
+    "height = 30\n",
+    "color = (\"maroon\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-180,-170)\n",
+    "t.pendown()\n",
+    "width = 360\n",
+    "height = 260\n",
+    "color = (\"bisque\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-210,90)\n",
+    "t.pendown()\n",
+    "color = (\"maroon\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.goto(0,240)\n",
+    "t.goto(210,90)\n",
+    "t.goto(-210,90)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(0,110)\n",
+    "t.pendown()\n",
+    "color = (\"gold\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.circle(50)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(0,110)\n",
+    "t.pendown()\n",
+    "t.pensize(3)\n",
+    "t.pencolor(\"black\")\n",
+    "t.goto(0,210)\n",
+    "t.penup()\n",
+    "t.goto(-50,160)\n",
+    "t.pendown()\n",
+    "t.goto(50,160)\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-130,-20)\n",
+    "t.pendown()\n",
+    "for i in range(4):\n",
+    "    width = 30\n",
+    "    height = 30\n",
+    "    color = (\"gold\")\n",
+    "    t.fillcolor(color)\n",
+    "    t.begin_fill()\n",
+    "    t.forward(width)\n",
+    "    t.left(90)\n",
+    "    t.forward(height)\n",
+    "    t.left(90)\n",
+    "    t.forward(width)\n",
+    "    t.left(90)\n",
+    "    t.forward(height)\n",
+    "    t.left(90)\n",
+    "    t.left(90)\n",
+    "    t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(130,-30)\n",
+    "t.pendown()\n",
+    "for i in range(4):\n",
+    "    width = 30\n",
+    "    height = 30\n",
+    "    color = (\"gold\")\n",
+    "    t.fillcolor(color)\n",
+    "    t.begin_fill()\n",
+    "    t.forward(width)\n",
+    "    t.left(90)\n",
+    "    t.forward(height)\n",
+    "    t.left(90)\n",
+    "    t.forward(width)\n",
+    "    t.left(90)\n",
+    "    t.forward(height)\n",
+    "    t.left(90)\n",
+    "    t.left(90)\n",
+    "    t.end_fill()\n",
+    "t.penup()\n",
+    "t.goto(-60,-170)\n",
+    "t.pendown()\n",
+    "width = 120\n",
+    "height = 170\n",
+    "color = (\"sienna\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-50,-160)\n",
+    "t.pendown()\n",
+    "width = 100\n",
+    "height = 150\n",
+    "color = (\"chocolate\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.forward(width)\n",
+    "t.left(90)\n",
+    "t.forward(height)\n",
+    "t.left(90)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-40,-90)\n",
+    "t.pendown()\n",
+    "color = (\"black\")\n",
+    "t.fillcolor(color)\n",
+    "t.begin_fill()\n",
+    "t.circle(5)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-275,-300)\n",
+    "t.pendown()\n",
+    "t.fillcolor(\"saddlebrown\")\n",
+    "t.begin_fill()\n",
+    "t.goto(-325,-300)\n",
+    "t.goto(-325,-50)\n",
+    "t.goto(-275,-50)\n",
+    "t.goto(-275,-300)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-425,-50)\n",
+    "t.pendown()\n",
+    "t.fillcolor(\"seagreen\")\n",
+    "t.begin_fill()\n",
+    "t.goto(-300,75)\n",
+    "t.goto(-175,-50)\n",
+    "t.goto(-425,-50)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-400,75)\n",
+    "t.pendown()\n",
+    "t.fillcolor(\"seagreen\")\n",
+    "t.begin_fill()\n",
+    "t.goto(-300,175)\n",
+    "t.goto(-200,75)\n",
+    "t.goto(-400,75)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.goto(-375,175)\n",
+    "t.pendown()\n",
+    "t.fillcolor(\"seagreen\")\n",
+    "t.begin_fill()\n",
+    "t.goto(-300,250)\n",
+    "t.goto(-225,175)\n",
+    "t.goto(-375,175)\n",
+    "t.end_fill()\n",
+    "\n",
+    "t.penup()\n",
+    "t.home()\n",
+    "t.goto(270,270)\n",
+    "t.pendown()\n",
+    "t.pensize(5)\n",
+    "t.pencolor(\"orangered\")\n",
+    "t.fillcolor(\"orangered\")\n",
+    "t.begin_fill()\n",
+    "for i in range(10):\n",
+    "    t.left(90)\n",
+    "    t.forward(55)\n",
+    "    t.backward(55)\n",
+    "    t.right(90)\n",
+    "    for i in range(36):\n",
+    "        t.forward(1)\n",
+    "        t.right(1)\n",
+    "t.end_fill()\n",
+    "turtle.done()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8b2e119",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
