KT_Chan_Le_2Bai

--- a/BT_KTSoChan_SoLe.ipynb
+++ b/BT_KTSoChan_SoLe.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9c161ea2",
+   "id": "b8beb95e",
    "metadata": {},
    "outputs": [
     {
@@ -24,14 +24,48 @@
     "        mgs = \" là số chẵn.\"\n",
     "    else:\n",
     "        mgs = \"là số lẻ.\"\n",
+    "    print(mgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7d5a2cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào một số:-7\n",
+      "là số lẻ.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = float(input(\"Nhập vào một số:\"))\n",
+    "if (num%2 == 0):\n",
+    "    mgs = \" là số chẵn.\"\n",
     "    print(mgs)\n",
-    "    \n"
+    "elif (num%2 == 1):\n",
+    "    mgs = \"là số lẻ.\"\n",
+    "    print(mgs)\n",
+    "else:\n",
+    "    print(\"Không phải là số tự nhiên!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168cec13",
+   "id": "5153da74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53befd39",
    "metadata": {},
    "outputs": [],
    "source": []
