KT_Chan_Le_2Bai

--- a/BT_KTSoChan_SoLe.ipynb
+++ b/BT_KTSoChan_SoLe.ipynb
@@ -2,35 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b8beb95e",
+   "execution_count": 8,
+   "id": "4c4fce6d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập vào một số:13\n",
+      "Nhập vào một số:-7\n",
       "là số lẻ.\n"
      ]
     }
    ],
    "source": [
     "num = int(input(\"Nhập vào một số:\"))\n",
-    "if num < 0:\n",
-    "    print(\"Bạn phải nhập một số tự nhiên!\")\n",
+    "if (num%2 == 0):\n",
+    "    mgs = \" là số chẵn.\"\n",
     "else:\n",
-    "    if (num%2 == 0):\n",
-    "        mgs = \" là số chẵn.\"\n",
-    "    else:\n",
-    "        mgs = \"là số lẻ.\"\n",
-    "    print(mgs)"
+    "    mgs = \"là số lẻ.\"\n",
+    "print(mgs)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7d5a2cd8",
+   "id": "166e236d",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5153da74",
+   "id": "2a47ff07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -65,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53befd39",
+   "id": "1b65640b",
    "metadata": {},
    "outputs": [],
    "source": []
